[package]
name = "deduplicate-rs"
version = "0.1.0"
authors = ["Steven Dake <steven.dake@gmail.com>", "Steven Dake <steve@computelify.com>"]
description = "The tool `deduplicate-rs` identifies duplicate media files and generates a bash script to cure the duplication."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sdake/deduplicate-rs"
repository = "https://github.com/sdake/deduplicate-rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
walkdir = "2.4"
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
twox-hash = "1.6"
